styles.css
/* Main variables */
:root {
    --color-text: #010101;
    --color-background: #ffffff;
    --color-background-secondary: #ececec;
    --color-secondary: #0444fc;
    
    --text-small: 12pt;
    --text-medium: 16pt;
    --text-large: 20pt;
    
    --font-serif: Georgia, serif;
    --font-sans-serif: 'Avant Garde Gothic Book', sans-serif;
    
    --page-width: 1200px;
    --radius: 4px;
    --border-width: 1px;
}

/* Fonts */
    @font-face {
        font-family: "Ready ActiveBold";
        src: url("assets/FONTS/Ready/Ready-ActiveBold.otf");
    }
    @font-face {
        font-family: "Ready ActiveLight";
        src: url("assets/FONTS/Ready/Ready-ActiveLight.otf");
    }
    @font-face {
        font-family: "Ready ActiveRegular";
        src: url("assets/FONTS/Ready/Ready-ActiveRegular.otf");
    }
    @font-face {
        font-family: "Avant Garde Gothic Book";
        src: url("assets/FONTS/Avant Garde Gothic/ITC Avant Garde Gothic LT Book.ttf");
    }

/* Helpers */
.page-width {
    width: var(--page-width);
}
.center {
    margin: auto;
}
.visually-hidden {
  position: absolute !important;
  overflow: hidden;
  width: 1px;
  height: 1px;
  margin: -1px;
  padding: 0;
  border: 0;
  clip: rect(0 0 0 0);
  word-wrap: normal !important;
}
.spread {
    justify-content: space-between;
    align-items: center;
}
.text-small {
    font-size: var(--text-small);
}
.text-medium {
    font-size: var(--text-medium);
}
.text-large {
    font-size: var(--text-large);
}

body {
    color: var(--color-text);
    background-color: var(--color-background);
    font-family: var(--font-sans-serif);
    margin: 0;
    height: 100vh;
    display: flex;
    flex-direction: column;
}
h1,
h2,
h3 {
    font-family: var(--font-sans-serif-bold);
    font-weight: 400;
}

a {
    color: var(--color-secondary);
    /* transition: ease-out 200ms; */
}
a:hover {
    color: color-mix(in srgb, var(--color-secondary), var(--color-text) 30%);
}

header, footer, main {
    display: flex;
    background-color: var(--color-background);
    padding: 2rem;
    margin: auto;
    width: var(--page-width);
    font-weight: 300;
    line-height: 1.6;
    font-size: var(--text-medium);
    /* border-left: .25rem solid var(--color-secondary); */
}
header {
    display: flex;
    justify-content: flex-end;
    align-items: center;
    padding-top: 2rem;
    padding-bottom: 0;
    margin-bottom: 0.5rem;
}
header #header-title {
    text-decoration: none;
    font-size: var(--text-small);
    color: var(--color-text);
    display: block;
}
#header-title h1 {
    font-family: var(--font-blocky);
    font-weight: 400;
}
header .logo {
    max-width: 218px;
}

main {
    flex-direction: column;
    flex-grow: 1;
}
footer {
    justify-content: space-between;
    align-items: center;
}
footer .menu-item:last-child {
    margin: 0;
}

img {
    width: 100%;
}

hr {
    height: var(--border-width);
    background-color: var(--color-secondary);
    border: none;
    width: 100%;
}

.splash {
    margin: auto;
}

header > nav > ul {
    list-style: none;
    display: block;
    padding: 0;
}
.menu-item {
    display: inline;
    margin-right: 1rem;
}
.menu-item a:not(.menu-item a:hover) {
    text-decoration: none;
}

.blog-list__container {
    /* border: var(--border-width) solid var(--color-text); */
    flex-grow: 1;
}
.blog-list {
    padding: 0 1.5rem 0 2rem;
}
.blog-list__item {
    /* background-color: color-mix(in srgb, var(--color-secondary), var(--color-background) 30%); */
    /* border: var(--border-width) solid var(--color-secondary); */
    background-color: var(--color-background);
    color: var(--color-text);
    list-style-type: square;
    padding: 1rem;
    margin: 0.8rem 0;
    font-weight: 400;
    transition: 200ms ease-out;
    border-radius: 0 2rem 2rem 0;
}
.blog-list > a {
    text-decoration: none;
}
a > .blog-list__item:hover {
    box-shadow: inset var(--page-width) 0px 0px var(--color-background-secondary);
    color: var(--color-secondary);
}
.blog-list__item::marker {
    transition: 100ms ease-out;
    color: var(--color-secondary);
}
.blog-list__item:hover::marker {
    color: var(--color-text);
}

.button {
    padding: .5rem;
    border: calc(var(--border-width) * 2) solid var(--color-secondary);
    background-color: var(--color-background);
    border-radius: var(--radius);
    color: var(--color-text);
    font-family: var(--font-sans-serif);
    font-size: var(--text-medium);
    cursor: pointer;
}
.button:hover {
    border-color: color-mix(in srgb, var(--color-secondary), white 20%);
}

/* Contact form */
section:has(.contact) {
    margin: auto;
}
.contact {
  max-width: 60%;
}
.contact h2 {
  margin: 1rem 0;
}
form.contact {
  max-width: 64rem;
  min-width: 48rem;
  margin: 2rem 0;
}

.contact p label {
  margin: 1rem 0;
}

.contact p label {
  display: flex;
  flex-direction: column;
}
.contact p input:focus, .contact textarea:focus {
  border-color: var(--color-secondary);
  box-shadow: 0px 0px 0px calc(var(--border-width) * 2) var(--color-secondary);
}
.contact p input, .contact textarea {
  width: 100%;
  padding: 8px 12px;
  margin: 8px 0;
  box-sizing: border-box;
  font-family: var(--font-sans-serif);
  font-size: var(--text-small);
  background-color: var(--color-background);
  color: var(--color-text);
  border: 2px solid color-mix(in srgb, var(--color-text), var(--color-background) 60%);
  border-radius: var(--radius);
  transition: ease-out .2s;
}
.contact textarea {
  margin: 8px 0;
  min-height: 15rem;
  resize: none;
}
.contact button {
  margin-top: 1rem;
}
@media screen and (max-width: 749px) {
  section:has(.contact) {
    max-width: 100%;
    margin: 0;
  }
  form.contact {
    min-width: auto;
  }
}
/* End contact form */

/* Mobile styling */
@media screen and (max-width: 749px) {
    header, footer, main {
        width: calc(100% - 3rem);
        padding: 2rem 1.5rem;
    }
    header {
        flex-direction: column;
    }
    header nav {
        text-align: center
    };
    header #header-title {
        font-size: calc(var(--text-small) - 25%);
    }
    #header-title h1 {
        font-family: var(--font-hyperbold);
    }

    footer {
        flex-direction: column;
        align-items: center;
    }
    footer menu {
        padding-left: 0;
    }
    #copyright {
        font-size: var(--text-small);
    }

    .blog-list__item {
        font-size: var(--text-small);
    }
}

